<resources>
    <string name="app_name">Fly Anywhere</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_saved_deals">Saved Deals</string>
    <string name="tab_relevant_deals">Relevant Deals</string>
    <string name="tab_all_deals">All Deals</string>
    <string name="tab_post_deal">Submit a deal</string>
    <string name="test_airlines">Airline - <b>Norwegian Air</b></string>
    <string name="test_description">Airline - <b>Norwegian Air</b>\n\nOne way, direct flights from London to Bangkok starting at $150 per person by Norwegian Air are available on these dates:\n\n
        8, 12, 16, 30 May 2018 \n\nRecommended booking sites: momondo.co.uk or norwegian.com\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="menu_save_a_deal">Save</string>
    <string name="menu_remove_a_deal">Remove</string>
    <string name="menu_report_a_deal">Report as expired</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="credits">All header photos and header images designed by <a href="https://www.freepik.com">Freepik</a></string>
    <string name="param_key_dealid">dealId</string>
    <string name="event_key_deal_search">deal_search</string>
    <string name="deal_key_departure_city">departureCity</string>
    <string name="deal_key_destination">destination</string>
    <string name="deal_key_departure_dates">departureDates</string>
    <string name="deal_key_return_dates">returnDates</string>
    <string name="deal_key_title">title</string>
    <string name="deal_key_image_url">imageUrl</string>
    <string name="deal_key_description">description</string>
    <string name="deal_key_postedby">postedBy</string>
    <string name="deal_key_deal_tags">dealTags</string>
    <string name="deal_key_expired_reports">expiredReports</string>
    <string name="deal_key_deal_type">dealType</string>
    <string name="deal_key_deal_price">dealPrice</string>
    <string name="deal_key_created_date">createdDate</string>
    <string name="deal_key_deal_id">dealId</string>
    <string name="deal_key_deal_link">searchLink</string>
    <string name="deal_type_one_way">ONE WAY</string>
    <string name="deal_type_return">RETURN</string>
    <string name="deal_type_around_the_world">AROUND THE WORLD</string>
    <string name="deal_type_multi_destination">MULTI DESTINATION</string>
    <string name="deal_saved_success_message">You\'ve successfuly saved a deal!</string>
    <string name="deal_removed_success_message">You\'ve removed a saved deal</string>
    <string name="deal_reported_message">Thanks for reporting!</string>
    <string name="error_internet_required_message">This action requires internet connection. Try again later</string>
    <string name="alert_title">Are you sure?</string>
    <string name="alert_message_report_expired">Do you really think this deal has expired?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="cd_page_header_image">Page header image</string>
    <string name="cd_departures_icon">departing airplane icon</string>
    <string name="cd_arrival_icon">Arriving airplane icon</string>
    <string name="cd_departure_dates">Departure dates icon</string>
    <string name="cd_arrival_dates">arrival dates icon</string>
    <string name="cd_deal_card_header_image">deal card header image</string>
    <string name="cd_nav_drawer_header_image">navigation drawer header image</string>
    <string name="cd_tag_icon">tag icon</string>
    <string name="cd_widget_list_item_header_image">widget list view item header image</string>
    <string name="credits_activity_header_text">Credits</string>
    <string name="post_fragment_header_text">Found a nice deal?</string>
    <string name="post_fragment_sub_header_text">Tell us about it. We\'ll check it out and post it if it meets our requirements!</string>
    <string name="post_fragment_title_hint">Title</string>
    <string name="post_fragment_link_hint">Link (optional)</string>
    <string name="post_fragment_description_hint">Description</string>
    <string name="post_fragment_submit_button_text">SUBMIT</string>
    <string name="info_item_header_text">Welcome</string>
    <string name="info_item_edit_tags_text">EDIT TAGS</string>
    <string name="widget_header_text">Saved Deals</string>
    <string name="widget_empty_listview_text">You haven\'t saved any deals yet</string>
    <string name="pref_key_last_seen_time">last_seen_time</string>
    <string name="error_sign_in_failed">Sign in failed, please try again.</string>
    <string name="notification_channel_name">Latest deal notifications</string>
    <string name="notification_title">New deals found!</string>
    <string name="notification_message_part1">While you were away, we found </string>
    <string name="notification_message_part2"> new deals that you might like!</string>
    <string name="event_notification_open">app_notification_open</string>
    <string name="error_title_cannot_be_empty">Title shouldn\'t be empty</string>
    <string name="error_description_cannot_be_empty">Description shouldn\'t be empty</string>
    <string name="error_description_too_short">Description should be at least 100 characters long. Please describe the deal you\'ve found.</string>
    <string name="success_submission_received">Submission received. Thank you!</string>
    <string name="error_error">Error</string>
    <string name="alert_ok">OK</string>
    <string name="action_bar_title_tag_activity">Select Tags</string>
    <string name="error_snackbar_no_internet">This action requires internet connection. Try again later</string>
    <string name="snackbar_tag_removed"> removed from your tag list</string>
    <string name="snackbar_tag_added"> added to your tag list</string>
    <string name="snacbkar_no_such_tag">No such tag exists</string>
    <string name="params_tag">tag</string>
    <string name="button_text_expired">Expired</string>
    <string name="deal_price_from">FROM £</string>
    <string name="info_item_relevant_deals">Only deals relevant to the tags you\'ve selected are displayed here. If you wish to see more deals, edit tags or view all deals!</string>
    <string name="info_item_saved_deals">The deals you\'ve saved are displayed here. Feel free to add or remove any by opening a deal, tapping on the options menu and selecting \'Save deal\' or \'Remove deal.\'</string>
    <string name="info_item_alL_deals">You can browse all recent deals regardless of the tags you\'ve selected. Take a look at what we\'ve found!</string>
    <string name="error_only_for_logged_in_users">Only logged in users can use this feature.</string>
    <string name="toast_tags_updated">Tags updated!</string>
    <string name="error_toast_not_logged_in">You\'re not logged in!</string>
    <string name="error_no_internet_main">You are not connected to the internet, some information may not be up to date</string>
    <string name="url_placeholder_header_image">https://image.freepik.com/free–photo/camera–and–compass–near–magnifying–glass–and–binoculars_23-2147793476.jpg</string>
    <string name="date_format">dd-MMM-yyyy</string>
    <string name="posted_by_pt1">Posted by</string>
    <string name="posted_by_pt2">on</string>
    <string name="method_getSingleDealFromSnapshot">getSingleDealFromSnapshot:</string>
</resources>
