<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.flyanywhere.ui.PostDealFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardMarginVertical"
            android:layout_marginEnd="@dimen/cardMarginHorizontal"
            android:layout_marginLeft="@dimen/cardMarginHorizontal"
            android:layout_marginRight="@dimen/cardMarginHorizontal"
            android:layout_marginStart="@dimen/cardMarginHorizontal"
            android:layout_marginTop="@dimen/cardMarginVertical"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:padding="@dimen/paddingLarge">

                <TextView
                    android:id="@+id/tv_post_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/paddingLarge"
                    android:text="@string/post_fragment_header_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textMedium" />

                <TextView
                    android:id="@+id/tv_post_header_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:paddingBottom="@dimen/paddingLarge"
                    android:text="@string/post_fragment_sub_header_text"
                    android:textAlignment="viewStart"
                    android:textColor="@color/darkGrey"
                    android:textDirection="locale"
                    android:textSize="@dimen/textSmall" />

                <EditText
                    android:id="@+id/et_post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/marginLarge"
                    android:backgroundTint="@color/lightGrey"
                    android:hint="@string/post_fragment_title_hint"
                    android:inputType="text"
                    android:maxLength="200"
                    android:textAlignment="viewStart"
                    android:textColor="@color/lightGrey"
                    android:textDirection="locale"
                    android:textSize="@dimen/textSmall" />

                <EditText
                    android:id="@+id/et_post_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/marginLarge"
                    android:backgroundTint="@color/lightGrey"
                    android:hint="@string/post_fragment_link_hint"
                    android:inputType="text"
                    android:maxLength="300"
                    android:textAlignment="viewStart"
                    android:textColor="@color/lightGrey"
                    android:textDirection="locale"
                    android:textSize="@dimen/textSmall" />

                <EditText
                    android:id="@+id/et_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/marginLarge"
                    android:backgroundTint="@color/lightGrey"
                    android:hint="@string/post_fragment_description_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="3000"
                    android:maxLines="50"
                    android:textAlignment="viewStart"
                    android:textColor="@color/lightGrey"
                    android:textDirection="locale"
                    android:textSize="@dimen/textSmall" />

                <Button
                    android:id="@+id/btn_submit_deal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dealButtonHeight"
                    android:layout_marginBottom="@dimen/marginLarge"
                    android:background="@drawable/price_button_selector"
                    android:text="@string/post_fragment_submit_button_text"
                    android:textAllCaps="true" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>